@@ -1,14 +1,16 @@
 package com.se.jcb_mng.controllers;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -40,45 +42,63 @@ public class FeedbackController {
         }
     }
 
+    @GetMapping("/all")
+    @PreAuthorize("hasRole('ADMIN')")
+    public List<FeedbackResponse> getAllFeedback() {
+        return feedbackService.getAllFeedback().stream()
+                .map(FeedbackController::toResponse)
+                .toList();
+    }
+
     @GetMapping("/my")
     @PreAuthorize("hasRole('CUSTOMER')")
-    public ResponseEntity<List<FeedbackResponse>> getMyFeedback(Authentication authentication) {
-        return ResponseEntity.ok(feedbackService.getFeedbackByUsername(authentication.getName()).stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList()));
+    public List<FeedbackResponse> getMyFeedback(Authentication authentication) {
+        return feedbackService.getFeedbackByUsername(authentication.getName()).stream()
+                .map(FeedbackController::toResponse)
+                .toList();
     }
 
-    @GetMapping("/all")
-    @PreAuthorize("hasRole('ADMIN')") // Only Admins can see all feedback
-    public ResponseEntity<List<FeedbackResponse>> getAllFeedback() {
-        return ResponseEntity.ok(feedbackService.getAllFeedback().stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList()));
+    @PutMapping("/{id}")
+    @PreAuthorize("hasRole('CUSTOMER')")
+    public ResponseEntity<?> updateFeedback(
+            Authentication authentication,
+            @PathVariable Long id,
+            @RequestParam String message,
+            @RequestParam Integer rating) {
+        try {
+            Feedback feedback = feedbackService.updateFeedback(
+                    id, authentication.getName(), message, rating);
+            return ResponseEntity.ok(toResponse(feedback));
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 
-    @GetMapping("/user/{userId}")
+    @DeleteMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<List<FeedbackResponse>> getFeedbackByUser(@PathVariable Long userId) {
-        return ResponseEntity.ok(feedbackService.getFeedbackByUserId(userId).stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList()));
+    public ResponseEntity<?> deleteFeedback(@PathVariable Long id) {
+        try {
+            feedbackService.deleteFeedback(id);
+            return ResponseEntity.ok("Feedback deleted successfully.");
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 
-    private FeedbackResponse toResponse(Feedback feedback) {
+    private static FeedbackResponse toResponse(Feedback feedback) {
         return new FeedbackResponse(
                 feedback.getId(),
+                feedback.getUser().getUsername(),
                 feedback.getMessage(),
                 feedback.getRating(),
-                feedback.getSubmittedAt(),
-                feedback.getUser().getUsername());
+                feedback.getSubmittedAt());
     }
 
     public record FeedbackResponse(
             Long id,
+            String username,
             String message,
             Integer rating,
-            java.time.LocalDateTime submittedAt,
-            String username) {
+            LocalDateTime submittedAt) {
     }
-
 }
